
=== Revision history for distribution Mail-Box-Parser-C.

version 3.012:

	Changes:
	- MailBox mid-life  upgrade: require Perl minimal version 5.016.

	Improvements:
	- add .gitignore
	- convert install process to OODoc 3.05
	- restyle code to OODoc v3
	- depend on Mail::Message v3, not 4.

version 3.011: Fri Sep 15 20:17:44 CEST 2023

	3.010 Not indexed by CPAN, try to recover by uploading a new
	release. Spotted by [Todd Richmond]

version 3.010: Sun Mar  4 17:19:54 CET 2018

	Fixes:
	- repair incorrect initial GitHub release.

version 3.009: Sun Mar  4 17:16:43 CET 2018

	Improvements:
	- converted to GIT and GitHub
	- add pod tester

version 3.008: Thu  2 Feb 15:48:14 CET 2017

	Improvements:
	- rename test.pl -> t/01use.t
	- rename C.pm -> lib/Mail/Box/Parser/C.pm

version 3.007: Mon Mar  4 22:25:53 CET 2013

	Improvements:

	- max header field length from 1024 to unlimited.
	  rt.cpan.org#83749 [Jonathan Kamens]

version 3.006: Wed Sep 22 14:50:08 CEST 2004

	Interface changes:

	- bodyAsList() now returns a ref-array of lines, in stead of a list
	  of lines.  This is required by MailBox v2.058

	Improvements:

	- new method get_filehandle()

version 3.005: Mon May 31 17:26:23 CEST 2004

	Fixes:

	- Removed recursive dependency for Mail::Box.  Seems unsolvable.
	  [Jeff Squyres] and [Liz Mattijsen]

version 3.004: Mon Apr 5 07:55:52 CEST 2004

	Fixes:

	- Missing dependency for Mail::Box, reported by [anonymous]

	- Added missing LICENSE, thanks to [Tony Bowden]

version 3.003: Thu Aug 28 08:30:26 CEST 2003

	Fixes:

	- Removal of the Mail::Box dependency caused the test to fail!
	  Now only tries to compile itself when Mail::Box is installed.
	  Signaled by [Mike Castle] and [Jeroen Latour]

version 3.002: Wed Aug 27 15:09:46 CEST 2003

	Improvements:

	- Does not depend on Mail::Box anymore, because Mail::Box may
	  required Mail::Box::Parser::C, which results in a
	  cyclic dependency. [Liz Mattijsen]
